<resources>
    <string name="app_name">Dog or Cat Person</string>
    <string name="action_settings">Settings</string>
    <string name="result_title">Your results!</string>
    <string name="canines_ques">Are you afraid of canines?</string>
    <string name="canines_yes">Yes</string>
    <string name="canines_no">No</string>
    <string name="feline_ques">On a scale of 1 to 10 , how comfortable are you around Felines?</string>
    <string name="comfortableness">Comfortableness: 0/10 </string>
    <string name="cuteness">What do you think is cute?</string>
    <string name="cute_dog">Dog</string>
    <string name="cute_cat">Cat</string>
    <string name="drool_ques">Are you OK with creatures that droll?</string>
    <string name="droll_yes">Yes</string>
    <string name="droll_no">No</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="result_text">You are a ....</string>

</resources>
